--- a/app/src/main/res/layout/fragment_bus_routes_list.xml
+++ b/app/src/main/res/layout/fragment_bus_routes_list.xml
@@ -3,39 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bus_routes_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:background="@color/background_light_grey"
-        android:elevation="@dimen/shadow_height"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/txt_route_start"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginEnd="8dp"
-            android:gravity="center" />
-        <Button
-            android:id="@+id/btn_change_direction"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:src="@mipmap/right_arrow"
-            android:background="@drawable/green_right_arrow_button"
-            android:contentDescription="@string/empty_string"/>
-        <TextView
-            android:id="@+id/txt_route_end"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginStart="8dp"
-            android:gravity="center"/>
-    </LinearLayout>
 
     <include
         layout="@layout/swipe_refresh_recyclerview"
