--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,12 @@
     <color name="text_dark_grey">#808080</color>
     <color name="text_light_grey">#D3D3D3</color>
 
+    <color name="route_marker_text">#01579B</color>
+    <color name="route_start">#EA4335</color>
+    <color name="route_end">#4CB344</color>
+    <!--color name="route_start">#E60012</color>
+    <color name="route_end">#22AC38</color-->
+
     <color name="header_info_background">#DCDCDC</color>
     <color name="background_light_grey">#DCDCDC</color>
 
