--- a/app/src/main/res/layout/fragment_bus_arrivals_list_item_next_bus.xml
+++ b/app/src/main/res/layout/fragment_bus_arrivals_list_item_next_bus.xml
@@ -1,42 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/arrive_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxWidth="40dp"
-        android:layout_centerInParent="true"/>
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <View
         android:id="@+id/bus_load"
         android:layout_width="@dimen/bus_load_bar_width"
         android:layout_height="@dimen/bus_load_bar_height"
-        android:layout_below="@id/arrive_time"
-        android:layout_centerHorizontal="true"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/arrive_time"/>
 
     <ImageView
         android:id="@+id/bus_type"
         android:layout_width="25dp"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/empty_string"
         android:paddingTop="4dip"
-        android:layout_toStartOf="@id/bus_load"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/empty_string"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/bus_load"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/minutes"
+        style="@style/ListItemText.Small"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_toEndOf="@id/arrive_time"
         android:text="@string/bus_arrive_in_minutes"
         android:textColor="@color/text_light_grey"
-        style="@style/ListItemText.Small"
-        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/arrive_time"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RelativeOverlap"/>
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
