--- a/app/src/main/res/layout/fragment_bus_routes_list.xml
+++ b/app/src/main/res/layout/fragment_bus_routes_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bus_routes_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,6 +10,5 @@
     <include
         layout="@layout/swipe_refresh_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"/>
-</LinearLayout>
+        android:layout_height="match_parent" />
+</android.support.constraint.ConstraintLayout>
