--- a/app/src/main/res/layout/fragment_bus_routes_list_item.xml
+++ b/app/src/main/res/layout/fragment_bus_routes_list_item.xml
@@ -1,73 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:animateLayoutChanges="true">
 
-    android:animateLayoutChanges="true"
-    android:orientation="vertical">
-    
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/main_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
-            android:id="@+id/sequence"
+            android:id="@+id/txt_sequence"
+            style="@style/ListItemText.Medium"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            style="@style/ListItemText.Medium"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/bus_stop"
+            android:id="@+id/txt_bus_stop"
+            style="@style/ListItemText.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:padding="0dp"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@id/sequence"
-            android:textStyle="bold"
             android:textColor="@color/text_dark_blue"
-            style="@style/ListItemText.Medium" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/txt_sequence"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/details"
+            android:id="@+id/txt_details"
+            style="@style/ListItemText.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:padding="0dp"
-            android:layout_below="@id/bus_stop"
-            android:layout_toEndOf="@id/sequence"
-            style="@style/ListItemText.Small" />
-    </RelativeLayout>
-    <LinearLayout
+            app:layout_constraintStart_toEndOf="@id/txt_sequence"
+            app:layout_constraintTop_toBottomOf="@id/txt_bus_stop" />
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/extra_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
+        app:layout_constraintTop_toBottomOf="@id/main_info">
+
         <View
+            android:id="@+id/separator"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/background_light_grey"/>
+            android:background="@color/background_light_grey"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <TextView
-            android:id="@+id/oper_time"
-            android:layout_width="match_parent"
+            android:id="@+id/txt_oper_time"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:textAlignment="textEnd"
+            android:text="@string/bus_route_oper_time"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@id/separator"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
-            android:id="@+id/buses"
-            android:layout_width="match_parent"
+            android:id="@+id/txt_buses"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
-    </LinearLayout>
-</LinearLayout>
+            android:textAlignment="textEnd"
+            android:text="@string/bus_route_buses"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txt_oper_time_info"/>
+
+        <android.support.constraint.Barrier
+            android:id="@+id/barrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="end"
+            app:constraint_referenced_ids="txt_oper_time, txt_buses"/>
+
+        <TextView
+            android:id="@+id/txt_oper_time_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/barrier"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/separator"/>
+
+        <TextView
+            android:id="@+id/txt_buses_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/barrier"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txt_oper_time_info"/>
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.constraint.ConstraintLayout>
