--- a/app/src/main/res/layout/fragment_bus_stops.xml
+++ b/app/src/main/res/layout/fragment_bus_stops.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,13 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/header_info_height"
         android:background="@color/header_info_background"
-        android:elevation="@dimen/shadow_height">
+        android:elevation="@dimen/shadow_height"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bus_stops_tab_list"/>
-
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,13 +31,19 @@
         layout="@layout/swipe_refresh_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:layout_weight="1"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabs" />
 
     <include
         layout="@layout/fragment_map"
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabs"
         android:visibility="gone"/>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
