--- a/app/src/main/res/layout/swipe_refresh_recyclerview.xml
+++ b/app/src/main/res/layout/swipe_refresh_recyclerview.xml
@@ -6,8 +6,7 @@
     android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="0dip"
-    android:layout_marginTop="@dimen/shadow_height"
-    android:layout_weight="1">
+    android:layout_marginTop="@dimen/shadow_height">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
